--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,9 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+    <string name="deleted">Deleted</string>
+    <string name="unable_to_delete">Unable To Delete</string>
+    <string name="added">Added</string>
+    <string name="faield">Failed</string>
 
 </resources>
